// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a stop card 1`] = `
<div
  className="m-tnm-sidebar__route"
>
  <div
    className="h3 m-tnm-sidebar__route-name u-bg--bus"
  >
    <span
      className="bus-route-sign"
    >
      504
    </span>
  </div>
  <div
    className="m-tnm-sidebar__stop"
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <a
        className="m-tnm-sidebar__stop-name"
        href="/stops/9983"
      >
        <span
          className="m-tnm-sidebar__stop-marker"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg id=\\"icon-feature-map-stop-icon\\"></svg>",
            }
          }
        />
         
        Stuart St @ Charles St S
      </a>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        238 ft
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Outbound
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            Watertown
          </div>
          <div
            className="m-tnm-sidebar__via"
          >
            via Copley (Express)
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                14
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                44
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__stop"
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <a
        className="m-tnm-sidebar__stop-name"
        href="/stops/6542"
      >
        <span
          className="m-tnm-sidebar__stop-marker"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg id=\\"icon-feature-map-stop-icon\\"></svg>",
            }
          }
        />
         
        Kneeland St @ Washington St
      </a>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        0.2 mi
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Inbound
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            Downtown
          </div>
          <div
            className="m-tnm-sidebar__via"
          >
            via Copley (Express)
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                14
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders a stop card for the silver line 1`] = `
<div
  className="m-tnm-sidebar__route"
>
  <div
    className="h3 m-tnm-sidebar__route-name u-bg--silver-line"
  >
    <span
      className=""
    >
      SL4
    </span>
  </div>
  <div
    className="m-tnm-sidebar__stop"
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <a
        className="m-tnm-sidebar__stop-name"
        href="/stops/place-tumnl"
      >
        <span
          className="m-tnm-sidebar__stop-marker"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg id=\\"icon-feature-map-station-icon\\"></svg>",
            }
          }
        />
         
        Tufts Medical Center
      </a>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        0.1 mi
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Outbound
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            Dudley
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                4
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                16
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Inbound
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            South Station
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                4
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__stop"
  >
    <div
      className="m-tnm-sidebar__stop-info"
    >
      <a
        className="m-tnm-sidebar__stop-name"
        href="/stops/6537"
      >
        <span
          className="m-tnm-sidebar__stop-marker"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg id=\\"icon-feature-map-stop-icon\\"></svg>",
            }
          }
        />
         
        Washington St @ Essex St
      </a>
      <div
        className="m-tnm-sidebar__stop-distance"
      >
        0.2 mi
      </div>
    </div>
    <div>
      <div
        className="m-tnm-sidebar__direction"
      >
        <div
          className="m-tnm-sidebar__direction-name u-small-caps"
        >
          Inbound
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large"
          >
            South Station
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                1
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time"
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                4
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`returns null if route has no schedules 1`] = `null`;
